# Industryts

./: .gitignore  Cargo.toml  Makefile  README.md  justfile  pyproject.toml  target.md
.github/: CICD_CHECKLIST.md  verify-ci.sh
.github/workflows/: README.md  ci.yml  release.yml
crates/industryts-core/: Cargo.toml
crates/industryts-core/src/: config.rs  error.rs  lib.rs  pipeline.rs  timeseries.rs  utils.rs
crates/industryts-core/src/operations/: cleaning.rs  features.rs  mod.rs  time.rs  transform.rs
docs/: .gitignore  CHANGELOG-LOCALE.md  CLAUDE.md  README.md  index.md  justfile  package.json
docs/.vitepress/: config.ts
docs/en/: index.md
docs/en/guide/: architecture.md  installation.md  introduction.md  quick-start.md
docs/en/guide/concepts/: timeseries.md
docs/guide/: architecture.md  examples.md  installation.md  introduction.md  migration.md  quick-start.md
docs/guide/concepts/: timeseries.md
docs/zh/: index.md
docs/zh/guide/: architecture.md  examples.md  installation.md  introduction.md  migration.md  quick-start.md
docs/zh/guide/concepts/: timeseries.md
examples/: basic_usage.py
examples/configs/: basic_pipeline.toml  feature_engineering.toml  production_pipeline.toml
openspec/changes/add-timeseries-processing/: design.md  proposal.md  tasks.md
openspec/changes/add-timeseries-processing/specs/pipeline-config/: spec.md
openspec/changes/add-timeseries-processing/specs/timeseries-core/: spec.md
openspec/changes/add-timeseries-processing/specs/timeseries-processing/: spec.md
py-industryts/: Cargo.toml
py-industryts/docs/: .gitignore  QUICK_START.md  README.md  STRUCTURE.md  index.md  justfile  package.json
py-industryts/docs/.vitepress/: config.ts
py-industryts/docs/api/: core.md
py-industryts/docs/en/: index.md
py-industryts/docs/en/api/: core.md
py-industryts/docs/en/examples/: basic.md
py-industryts/docs/en/guide/: installation.md  introduction.md  quick-start.md
py-industryts/docs/en/guide/concepts/: timeseries.md
py-industryts/docs/examples/: basic.md
py-industryts/docs/guide/: installation.md  introduction.md  quick-start.md
py-industryts/docs/guide/concepts/: timeseries.md
py-industryts/industryts/: __init__.py  _its.pyi  pipeline.py  py.typed  timeseries.py
py-industryts/src/: lib.rs
