[workspace]
resolver = "2"
members = [
    "crates/industryts-core",
    "py-industryts",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/your-org/industryts"

[workspace.dependencies]
# Polars for DataFrame operations (using 0.51 to match pyo3-polars 0.24)
polars = { version = "0.51", features = ["lazy", "temporal", "dtype-datetime", "dtype-date"] }

# PyO3 for Python bindings (using 0.25 for pyo3-polars compatibility)
pyo3 = { version = "0.25", features = ["extension-module", "abi3-py38"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
rayon = "1.10"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
inherits = "release"
debug = true
