[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "industryts"
version = "0.1.0"
description = "High-performance time series processing library powered by Rust and Polars"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["timeseries", "polars", "rust", "performance", "data-processing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "polars[rtcompat]>=1.35.0",
    "pyarrow>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "maturin>=1.0,<2.0",
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "mypy>=1.0",
    "pyright>=1.1",
    "ruff>=0.1",
    "hypothesis>=6.0",
]

test = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "hypothesis>=6.0",
]

[project.urls]
Homepage = "https://github.com/your-org/industryts"
Documentation = "https://industryts.readthedocs.io"
Repository = "https://github.com/your-org/industryts"
"Bug Tracker" = "https://github.com/your-org/industryts/issues"

[tool.maturin]
manifest-path = "py-industryts/Cargo.toml"
features = ["pyo3/extension-module", "pyo3/abi3-py39"]
compatibility = "manylinux2014"
python-source = "py-industryts"
module-name = "industryts._its"

[tool.pytest.ini_options]
testpaths = ["py-industryts/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
files = ["py-industryts/industryts"]

[[tool.mypy.overrides]]
module = "industryts._its"
ignore_missing_imports = true

[tool.pyright]
include = ["py-industryts/industryts"]
exclude = ["**/__pycache__", "target"]
pythonVersion = "3.9"
typeCheckingMode = "basic"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
